<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/naslov"
        android:textColor="@android:color/black"
        android:textSize="35dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/Button03"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:text="@string/button1"
            android:textSize="25dp"
            android:textStyle="bold"
            android:onClick="igraj_OnClick" />

        <Button
            android:id="@+id/Button02"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:text="@string/button2"
            android:textSize="17dp" 
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:text="@string/button3"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="190dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:src="@drawable/musketeers1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="200dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:src="@drawable/musketeers3" />

</RelativeLayout>