<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/musk"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:background="@drawable/okvir"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/Button03"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/alfabeta"
                    android:onClick="button_Click"
                    android:text="3"
                    android:textColor="@android:color/transparent"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ime"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/EditText02"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_weight="1"
                        android:background="@drawable/text"
                        android:ems="10"
                        android:text="Comp 1"
                        android:paddingLeft="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" 
                    android:visibility="visible" 
                    android:id="@+id/igrmussket" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/EditText01"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_weight="1"
                        android:background="@drawable/text"
                        android:ems="10"
                        android:paddingLeft="10dp" 
                        android:inputType="number"
                        android:text="30" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/crta" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/carl"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:background="@drawable/okvir"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/musketeers2"
                    android:onClick="button_Click"
                    android:text="1"
                    android:textColor="@android:color/transparent"
                    android:textSize="25dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ime"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_weight="1"
                        android:background="@drawable/text"
                        android:ems="10"
                        android:paddingLeft="10dp" 
                        android:text="Igralec 2"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/nasprotnik" >

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/EditText03"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_weight="1"
                        android:background="@drawable/text"
                        android:ems="10"
                        android:inputType="number"
                        android:paddingLeft="10dp"
                        android:text="30" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/nazaj"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/nazaj"
            android:textSize="20dp"
            android:textStyle="bold" 
            android:onClick="nazaj_OnClick"/>
        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/button1"
            android:textSize="20dp"
            android:textStyle="bold" 
            android:onClick="start_OnClick" />

    </LinearLayout>

</RelativeLayout>